Clean log and comments
- Show command in accept/decline button
- Clear some log where send team message in game